--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,11 @@
     "@fastify/cors": "^11.2.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
-    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
